2022-05-15 blog post: period management

--- a/output/archives.html
+++ b/output/archives.html
@@ -75,6 +75,19 @@
         <div class="card">
 
             <div class="card-image hide-md">
+                <img class="img-responsive" src="../images/pexels/pexels-pixabay-39578.jpg">
+            </div>
+            
+            <div class="card-body">
+                <a href="./accounting-softwares-missing-killer-feature.html">Accounting Software's Missing Killer Feature</a>
+                <p><p>Millions of businesses miss this killer feature from their accounting software</p></p>
+            </div>
+        </div>
+    </div>
+    <div class="column col-3 col-md-6 col-sm-12 mt-2">
+        <div class="card">
+
+            <div class="card-image hide-md">
                 <img class="img-responsive" src="../images/origin/xero_convert_code.png">
             </div>
             
