--- a/output/take-your-accounts-offline.html
+++ b/output/take-your-accounts-offline.html
@@ -91,6 +91,7 @@
 <p>With this in mind, what is the alternative? This solution works for a very small business. A single director consultancy, or maybe with a few staff. It may be scalable with some work, but that it outside the scope of this post.</p>
 <p>The biggest "problem" that cloud accounting solves is VAT MTD. All businesses that are VAT registered have to use <a href="https://www.gov.uk/guidance/find-software-thats-compatible-with-making-tax-digital-for-vat">specific software</a> for filing VAT. The answer is VAT bridging software. <a href="https://www.taxcalc.com/">TaxCalc</a> sells VAT filing software for £17.50 a year. That makes it a lot less money than full-blown accounting software.</p>
 <p>So what to use for the bookkeeping part? Any software that you are able to keep accurate accounts in would work. A spreadsheet would be fine, but would end up being onerous for reconciling and making sure that the data is correct. The VAT bridging software would work well with either <a href="https://plaintextaccounting.org/">Plain Text Accounting</a> or <a href="https://gnucash.org/">Gnucash</a> if you'd like a user interface.</p>
+<p>The last part, but most important, is sales invoices. Many banking apps like <a href="https://www.tide.co/">Tide</a> include invoicing within their app free of charge. Sales invoices can be generated in the app, and then entered as a plain text transation.</p>
         </div>
 
         <div class="column col-12">
