added sitemap, alt-text for images, meta tags on pages

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>About</title>
 		<meta name="summary" content="Why should you choose Corax FM as your accountants?">
+        <meta name="description" content="About CoraxFM" />
 	</head>
 
 <body>
@@ -15,11 +16,11 @@
                 </div>
 
                 <div class="column col-4 hide-md">
-                    <img class="p-centered img-responsive" src="../images/storyset/Fill out-amico.svg">
+                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Fill out-amico.svg" alt="Image of a person holding a really big pen and completing an equally big form">
                 </div>
 
                 <div class="column col-4 hide-md">
-                    <img class="p-centered img-responsive" src="../images/storyset/Statistics-amico.svg">
+                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Statistics-amico.svg" alt="A person holiding a clipboard, looking at a curvy line graph with percentage signs. Also there is a doughnut chart on the floor.">
                 </div>
 
                 <div class="column col-8 col-md-12">
@@ -34,7 +35,7 @@
                 </div>
 
                 <div class="column col-4 hide-md">
-                    <img class="p-centered img-responsive" src="../images/storyset/Report-amico.svg">
+                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Report-amico.svg" alt="A person holding a clipboard, looking at a giant tablet containing some serious looking reports. He left his massive pencil and second clipboard on the floor. Presumably because he can't hold them.">
                 </div>
             </div>
         </div>
