--- a/content/pages/software.html
+++ b/content/pages/software.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Software</title>
 		<meta name="summary" content="Corax FM Software">
+        <meta name="description" content="Software used by CoraxFM" />
 	</head>
 
 <body>
