--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -36,7 +36,7 @@
                     <a class="btn btn-link" href="../pages/services.html">Services</a>
                     <a class="btn btn-link" href="../pages/software.html">Software</a>
                 <a class="btn btn-link mr-2" href="../archives.html">Blog</a>
-                <a class="btn btn-link bg-success text-light hide-sm" href="../">Get A Quote</a>
+                <a class="btn btn-link bg-success text-white hide-sm" href="../">Get A Quote</a>
             </section>
 
             <secion class="navbar-section show-sm">
@@ -78,11 +78,11 @@
                 </div>
 
                 <div class="column col-4 hide-md">
-                    <img class="p-centered img-responsive" src="../images/storyset/Fill out-amico.svg">
+                    <img height="300px" width="300px" class="p-centered img-responsive" src="../images/storyset/Fill out-amico.svg" alt="Image of a person holding a really big pen and completing an equally big form">
                 </div>
 
                 <div class="column col-4 hide-md">
-                    <img class="p-centered img-responsive" src="../images/storyset/Statistics-amico.svg">
+                    <img height="300px" width="300px" class="p-centered img-responsive" src="../images/storyset/Statistics-amico.svg" alt="A person holiding a clipboard, looking at a curvy line graph with percentage signs. Also there is a doughnut chart on the floor.">
                 </div>
 
                 <div class="column col-8 col-md-12">
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="column col-4 hide-md">
-                    <img class="p-centered img-responsive" src="../images/storyset/Report-amico.svg">
+                    <img height="300px" width="300px" class="p-centered img-responsive" src="../images/storyset/Report-amico.svg" alt="A person holding a clipboard, looking at a giant tablet containing some serious looking reports. He left his massive pencil and second clipboard on the floor. Presumably because he can't hold them.">
                 </div>
             </div>
         </div>
