--- a/output/pages/services.html
+++ b/output/pages/services.html
@@ -36,7 +36,7 @@
                     <a class="btn btn-link" href="../pages/services.html">Services</a>
                     <a class="btn btn-link" href="../pages/software.html">Software</a>
                 <a class="btn btn-link mr-2" href="../archives.html">Blog</a>
-                <a class="btn btn-link bg-success text-light hide-sm" href="../">Get A Quote</a>
+                <a class="btn btn-link bg-success text-white hide-sm" href="../">Get A Quote</a>
             </section>
 
             <secion class="navbar-section show-sm">
@@ -82,7 +82,7 @@
 		                </div>
 
 		                <div class="column col-4 hide-md">
-		                	<img height="300px" class="p-centered img-responsive" src="../images/storyset/Documents-amico.svg">
+		                	<img height="300px" width="300px" class="p-centered img-responsive" src="../images/storyset/Documents-amico.svg" alt="An image of manilla folders with documents showing.">
 		                </div>
 
 	                </div>
@@ -92,7 +92,7 @@
                 	<div class="columns">
 
 		                <div class="column col-4 hide-md">
-		                	<img height="300px" class="p-centered img-responsive" src="../images/storyset/Money income-amico.svg">
+		                	<img height="300px" width="300px" class="p-centered img-responsive" src="../images/storyset/Money income-amico.svg" alt="An illustration of a person with a laptop on their lap, next to a massive laptop with a piggy bank on it. The person is telling their piggy bank it will be OK.">
 		                </div>
 		                
 		                <div class="column col-8 col-md-12">
@@ -117,7 +117,7 @@
 		                </div>
 
 		                <div class="column col-4 hide-md">
-		                	<img height="300px" class="p-centered img-responsive" src="../images/storyset/Finance app-amico.svg">
+		                	<img height="300px" width="300px" class="p-centered img-responsive" src="../images/storyset/Finance app-amico.svg" alt="Illustration of a person holding their piggy bank under their arm, looking optimistic at a big up arrow escaping from a phone next to them. There are some gears and a coin on the floor for good measure.">
 		                </div>
 		            </div>
 		        </div>
