--- a/content/pages/services.html
+++ b/content/pages/services.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Services</title>
 		<meta name="summary" content="What Services Does Corax FM Offer?">
+		<meta name="description" content="Services provided by CoraxFM" />
 	</head>
 
 <body>
@@ -19,7 +20,7 @@
 		                </div>
 
 		                <div class="column col-4 hide-md">
-		                	<img height=300px class="p-centered img-responsive" src="../images/storyset/Documents-amico.svg">
+		                	<img height=300px width=300px class="p-centered img-responsive" src="../images/storyset/Documents-amico.svg" alt="An image of manilla folders with documents showing.">
 		                </div>
 
 	                </div>
@@ -29,7 +30,7 @@
                 	<div class="columns">
 
 		                <div class="column col-4 hide-md">
-		                	<img height=300px class="p-centered img-responsive" src="../images/storyset/Money income-amico.svg">
+		                	<img height=300px width=300px class="p-centered img-responsive" src="../images/storyset/Money income-amico.svg" alt="An illustration of a person with a laptop on their lap, next to a massive laptop with a piggy bank on it. The person is telling their piggy bank it will be OK.">
 		                </div>
 		                
 		                <div class="column col-8 col-md-12">
@@ -54,7 +55,7 @@
 		                </div>
 
 		                <div class="column col-4 hide-md">
-		                	<img height=300px class="p-centered img-responsive" src="../images/storyset/Finance app-amico.svg">
+		                	<img height=300px width=300px class="p-centered img-responsive" src="../images/storyset/Finance app-amico.svg" alt="Illustration of a person holding their piggy bank under their arm, looking optimistic at a big up arrow escaping from a phone next to them. There are some gears and a coin on the floor for good measure.">
 		                </div>
 		            </div>
 		        </div>
