change 'get quote' text back to text-light, added more alt-text

--- a/output/drafts/blog-ideas.html
+++ b/output/drafts/blog-ideas.html
@@ -42,7 +42,7 @@
                     <a class="btn btn-link" href="../pages/services.html">Services</a>
                     <a class="btn btn-link" href="../pages/software.html">Software</a>
                 <a class="btn btn-link mr-2" href="../archives.html">Blog</a>
-                <a class="btn btn-link bg-success text-white hide-sm" href="../">Get A Quote</a>
+                <a class="btn btn-link bg-success text-light@ hide-sm" href="../">Get A Quote</a>
             </section>
 
             <secion class="navbar-section show-sm">
