--- a/output/index.html
+++ b/output/index.html
@@ -34,7 +34,7 @@
                     <a class="btn btn-link" href="./pages/services.html">Services</a>
                     <a class="btn btn-link" href="./pages/software.html">Software</a>
                 <a class="btn btn-link mr-2" href="../archives.html">Blog</a>
-                <a class="btn btn-link bg-success text-white hide-sm" href="../">Get A Quote</a>
+                <a class="btn btn-link bg-success text-light@ hide-sm" href="../">Get A Quote</a>
             </section>
 
             <secion class="navbar-section show-sm">
@@ -138,7 +138,7 @@
                         <li>Advice</li>
                     </ul>
 
-                    <img height=300px class="p-centered hide-md img-responsive" src="../images/storyset/Fill out-amico.svg">
+                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Fill out-amico.svg" alt="Image of a person holding a really big pen and completing an equally big form">
                 </div>
                 
                 <div class="column col-4 col-md-12">
@@ -150,7 +150,7 @@
                         <li>Payroll</li>
                     </ul>
 
-                    <img height=300px class="p-centered hide-md img-responsive" src="../images/storyset/Statistics-amico.svg">
+                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Statistics-amico.svg" alt="A person holiding a clipboard, looking at a curvy line graph with percentage signs. Also there is a doughnut chart on the floor.">
                 </div>
                 
                 <div class="column col-4 col-md-12">
@@ -161,7 +161,7 @@
                         <li>Business Analysis</li>
                         <li>Forecasts and Budgeting</li>
                     </ul>
-                    <img height=300px class="p-centered hide-md img-responsive" src="../images/storyset/Report-amico.svg">
+                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Report-amico.svg" alt="A person holding a clipboard, looking at a giant tablet containing some serious looking reports. He left his massive pencil and second clipboard on the floor. Presumably because he can't hold them.">
                 </div>
 
             </div>
