--- a/output/automation.html
+++ b/output/automation.html
@@ -81,6 +81,7 @@
 <p>Now, the automation bits. The Gitea repository syncs every 8 hours with a Github repository. When the Github repository gets the latest code from Gitea, Netlify pulls the website from Gitea. Within the website all the blog posts are included in the <a href="https://www.coraxfm.uk/feed.rss">RSS feed</a>. <a href="https://zapier.com">Zapier</a> gets the most recent blog post from the RSS feed and does three things: posts on the <a href="https://www.linkedin.com/company/coraxfm/">CoraxFM Linkedin company page</a>, creates a <a href="https://twitter.com/CoraxFM">tweet</a>, and a <a href="https://medium.com/@coraxfm">Medium story</a>.</p>
 <p>I think that the trouble with some of the automations is that many people cannot even imagine what can be automated with relative ease. Zapier is a no-code solution to automation. You could replace the version control/static site stuff that here with Wordpress. Or anything else that supports an RSS feed.</p>
 <p>What processes might you have to automate?</p>
+<p><em>LAST MINUTE UPDATE</em>: The funny thing about this post is that attempting to push the respository to Gitea failed. I couldn't connect to my server at all. Trying to connect to my server through both my laptop and phone didn't work, either 4g or wifi. I forgot that I had set the firewall to limit ssh connections from to particular IP addresses. Automation can solve some problems, but can introduce others too!</p>
         </div>
 
         <div class="column col-12">
